src/ON.Installer/InstallerApp/Terraform/CreateServer/AWS/main.tf
variable prefix {}
variable location {}
variable username {}
variable sshPub {}

terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 3.27"
    }
  }

  required_version = ">= 0.14.9"
}

provider "aws" {
  profile = "default"
  region  = var.location
}

resource "aws_instance" "vm1" {
  ami           = "ami-830c94e3"
  instance_type = "t2.micro"
  key_name = aws_key_pair.deployer.key_name
  security_groups = ["cw-blog-3-sg-using-terraform"]

  tags = {
    Name = "${var.prefix}-ServerInstance"
  }
}

resource "aws_key_pair" "deployer" {
  key_name   = "${var.prefix}-deployer-key"
  public_key = var.sshPub
  #public_key = "ssh-rsa DUMMY/KEYy1yc2EAAAADAQABAAABAQD3F6tyEXAMPLEyX3X8BsXdMsQz1x2cEikKDEY0aIj41qgxMCP/iteneqXSIFZBp5vizPvaoIR3Um9xK7PGoW8giupGn+EPuxIA4cDM4vzOqOkiMPhz5XK0whEjkVzTo4+S0puvDZuwIsdiW9mxhJc7tgBNL0cYlWSYVkz4G/fslNfRPW5mYAM49f4fhtxPb5ok4Q2Lg9dPKVHO/Bgeu5woMc7RY0p1ej6D4CKFE6lymSDJpW0YHX/wqE9+cfEauh7xZcG0q9t2ta6F6fmX0agvpFyZo8aFbXeUBr7osSCJNgvavWbM/06niWrOvYX2xwWdhXmXSrbX8ZbabVohBK41 email@example.com"
}

resource "aws_security_group" "onf_sg_ssh" {
  name = "${var.prefix}-security-group"

  #Incoming traffic
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["11.xx.xx.xx/32"]
  }

  #Outgoing traffic
  egress {
    from_port = 0
    protocol = "-1"
    to_port = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
}
